include/style/widget.styl
.widget
    .menu-list
        li
            ul
                margin-right: 0

        .level
            margin-bottom: 0

            .level-left, .level-right, .level-item
                flex-shrink: 1

            .level-left, .level-right
                align-items: flex-start
            
            .level-item:has(mjx-container)
                display: block

        .tag
            background: $light-grey
            color: $white-invert

    .tags
        .tag:first-child
            background: $primary
            color: $primary-invert

        .tag:last-child
            background: $light-grey
            color: $white-invert

.level.is-multiline
    flex-wrap: wrap

/* ---------------------------------
 *      Table of Content Widget
 * --------------------------------- */
+mobile()
    .widget.card#toc
        display: none
        position: fixed
        margin: 1rem
        left: 0
        right: 0
        bottom: 0
        z-index: 100

        .card-content
            padding: 0

        .menu
            padding: 1.5rem
            max-height: calc(100vh - 2rem)
            overflow-y: auto

    #toc-mask
        display: none
        position: fixed
        top: 0
        left: 0
        right: 0
        bottom: 0
        z-index: 99
        background: rgba(0, 0, 0, .7)

    .widget.card#toc, #toc-mask
        &.is-active
            display: block

